# dojo

./: CLAUDE.md  README.md  conftest.py  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_RATIONALE.md  EVALUATION_HARNESS.md  INTEGRATION_WITH_AAT.md  REWARD_FUNCTION.md  TRAINING_PIPELINE.md
dojo/: cli.py  orchestrator.py
dojo/data/: backlog_generator.py
dojo/eval/: metrics.py  runner.py  solo_env.py
dojo/reward/: calibration.py  composite_reward.py  judge_evaluator.py
dojo/runtime/: candidate_runtime.py  registration.py
dojo/training/: curriculum.py  observation_encoder.py  ppo_trainer.py  trajectory_buffer.py
specs/: BEHAVIORAL_TAXONOMY.md  REWARD_SIGNALS.md  TRAINING_EPISODES.md  TRANSFER_ANALYSIS.md
tests/: test_aat_import.py  test_cli.py  test_orchestrator.py
tests/test_env/: test_aat_env.py  test_prompt_renderer.py  test_spaces.py
tests/test_eval/: test_metrics.py  test_runner.py  test_solo.py
tests/test_reward/: test_calibration.py  test_composite.py  test_judge.py
tests/test_runtime/: test_candidate_runtime.py  test_registration.py
tests/test_training/: test_backlog.py  test_curriculum.py  test_observation_encoder.py  test_ppo.py  test_trajectory.py
